--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.1.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.0",
+    "react-flexbox-grid": "^2.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
